--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/12-rock-paper-scissors.css">
+  <link rel="stylesheet" href="style.css">
   <title>Камень Ножницы Бумага</title>
 </head>
 <body>
@@ -44,6 +44,7 @@
       Авто игра
     </button>
   </div>
-<script src="scripts/12-rock-paper-scissors.js"></script>
+<script src="script.js"></script>
 </body>
+
 </html>
