--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
     <button class="move-buttons" onclick="
       playGame('Камень')
-    "><img src="img\Камень-emoji.png" class="img-move" alt="" ></button>
+    "><img src="Камень-emoji.png" class="img-move" alt="" ></button>
 
     <button class="move-buttons" onclick="
       playGame('Ножницы')
-    "><img src="img\Ножницы-emoji.png" class="img-move" alt="" ></button>
+    "><img src="Ножницы-emoji.png" class="img-move" alt="" ></button>
 
     <button class="move-buttons" onclick="
       playGame('Бумага')
-    "><img src="img\Бумага-emoji.png" class="img-move" alt="" ></button>
+    "><img src="Бумага-emoji.png" class="img-move" alt="" ></button>
   </div>
   
   <p class="js-moves"></p>
@@ -46,4 +46,5 @@
   </div>
 <script src="script.js"></script>
 </body>
+
 </html>
