--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Камень Ножницы Бумага</title>
 </head>
 <body>
@@ -75,7 +75,8 @@
       </p>
     </div>
   </div>
-<script src="scripts/script.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
+
